--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-manager-by-nishi",
+  "name": "node-file-management-app-with-jade-and-mongodb",
   "version": "1.0.0",
   "private": true,
   "scripts": {
